// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.branch.rebase.lock given: [case2] rebase in progress with package-lock.json when: [t0] lock refresh with npm then: lock regenerated, staged, exit 0 1`] = `
"🐢 shell yeah!

🐚 git.branch.rebase lock refresh
   ├─ detected: npm
   ├─ run: npm install
   ├─ staged
   │  └─ package-lock.json ✓
   └─ done
"
`;

exports[`git.branch.rebase.lock given: [case3] rebase in progress with yarn.lock when: [t0] lock refresh with yarn then: lock regenerated, staged, exit 0 1`] = `
"🐢 shell yeah!

🐚 git.branch.rebase lock refresh
   ├─ detected: yarn
   ├─ run: yarn install
   ├─ staged
   │  └─ yarn.lock ✓
   └─ done
"
`;

exports[`git.branch.rebase.lock given: [case4] no rebase in progress when: [t0] attempt lock refresh then: shows error: no rebase in progress 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase lock refresh
   └─ error: no rebase in progress
"
`;

exports[`git.branch.rebase.lock given: [case5] rebase in progress but no lock file when: [t0] attempt lock refresh then: shows error: no lock file found 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase lock refresh
   └─ error: no lock file found
"
`;

exports[`git.branch.rebase.lock given: [case7] yarn.lock extant but yarn not installed when: [t0] attempt lock refresh then: shows error: yarn not found 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase lock refresh
   └─ error: yarn not found, install yarn
"
`;

exports[`git.branch.rebase.lock given: [case9] install failure when: [t0] lock refresh with bad package.json then: shows install error 1`] = `
"🐢 bummer dude...

🐚 git.branch.rebase lock refresh
   ├─ detected: npm
   ├─ run: npm install
   └─ error: install failed

install output:
[npm error output masked - varies by version]
"
`;

exports[`git.branch.rebase.lock given: [case10] subcommand validation when: [t0] lock without subcommand then: shows error: subcommand required 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase lock
   └─ error: subcommand required (try: refresh)
"
`;

exports[`git.branch.rebase.lock given: [case10] subcommand validation when: [t1] lock with unknown subcommand then: shows error: unknown lock subcommand 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase lock
   └─ error: unknown lock subcommand: invalidcmd
"
`;
